# blog-generator

./: .dev.vars  .env  .env.dev  .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  template.html  wrangler.toml
backend/: Cargo.toml  Dockerfile  fly.toml
backend/entities/: Cargo.toml
backend/entities/src/: lib.rs  mod.rs  prelude.rs  user.rs  user_source.rs
backend/github/: Cargo.toml
backend/github/src/: lib.rs
backend/github/src/api/: mod.rs
backend/github/src/api/oauth/: access_token.rs  access_token_response.rs  mod.rs  redirect.rs  scope.rs
backend/github/src/api/rest/: mod.rs
backend/github/src/api/rest/repositories/: list.rs  mod.rs  repository_response.rs
backend/github/src/api/rest/search/: issues.rs  mod.rs  repositories.rs
backend/github/src/api/rest/user/: get.rs  mod.rs  user_response.rs
backend/github/src/auth/: oauth.rs
backend/github/src/blurb/: readme.rs
backend/github/src/posts/: issues.rs
backend/github/src/projects/: mod.rs  repo_topics.rs  repos.rs
backend/github/src/rest_api/responses/: get_access_token.rs  get_user.rs  mod.rs
backend/github/src/user/: profile.rs
backend/migration/src/: lib.rs  m20230604_000001_create_table.rs
backend/shared/: Cargo.toml
backend/shared/src/: environment.rs  lib.rs  source.rs
backend/shared/src/macros/: environment.rs
backend/shared/src/plugin/: auth.rs  data.rs  mod.rs  projects.rs  user.rs
backend/shared/src/plugin/response/: blurb.rs  mod.rs  posts.rs  projects.rs  user.rs
backend/shared/src/source/: auth.rs  mod.rs  project.rs  user.rs
backend/src/: main.rs
backend/src/extractors/: mod.rs  source_auth.rs
backend/src/providers/: mod.rs
backend/src/providers/github/: mod.rs  responses.rs
graphql/: home.query.graphql  post.query.graphql  query.graphql
prisma/: schema.prisma
scripts/: Cargo.toml
scripts/src/: main.rs  vercel.rs
scripts_sh/: deploy.sh  dev.sh
src/: github.rs  lib.rs  utils.rs
webapp/: .env.example  global.d.ts  package-lock.json  package.json  svelte.config.js  vite.config.js
webapp/src/: app.d.ts  app.html  hooks.ts
webapp/src/lib/: cloudflare.ts  github.ts  helpers.ts  jwt.ts
webapp/src/lib/components/: ButtonList.svelte  DnsRecordTable.svelte  Input.svelte  PopOver.svelte  Portal.svelte  Scroll.svelte
webapp/src/lib/stores/: onboarding.ts
webapp/src/routes/: dashboard.svelte  domain.ts  index.svelte  index.ts  oauth.ts  onboarding.svelte  referral.ts  user.ts
webapp/static/: main.css
worker/: Cargo.toml  package.json  wrangler.toml
worker/graphql/: query.graphql
worker/src/: cloudflare.rs  lib.rs
worker/src/durable_objects/: mod.rs  referral_token.rs
(+15 files in other folders)
