[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["github", "shared", "migration", "entities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["query"] }
dotenvy = "0.15.7"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["serde_derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
url = "2.3.1"
github = { path = "github" }
shared = { path = "shared" }
entities = { path = "entities" }
migration = { path = "migration" }
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }

[features]
dev = []
