[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[lib]
path = "./src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
serde = { version = "1.0.163", features = ["serde_derive"] }
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["sync"] }
url = "2.3.1"
